# quake-log-parser

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
src/: constants.py
src/app/: main.py
src/app/schemas/: game.py  healthcheck.py
src/domain/dto/: game.py
src/domain/interface/: log_reader.py
src/domain/service/: parse_log.py
src/domain/use_case/: get_games.py
src/infra/log_reader/: local_log_reader.py
tests/: conftest.py
tests/e2e/: test_api.py  utils.py
tests/integration/infra/log_reader/: games.log.sample  test_local_log_reader.py
tests/unit/domain/service/: games.log.sample  test_parse_log.py
tests/unit/domain/use_case/: test_get_games.py
