[tool.poetry]
name = "quake-log-parser"
version = "0.1.0"
description = "A parser for the Quake game"
authors = ["Paulo Freitas <paulogeo5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.1.0"
fastapi = "^0.100.0"
orjson = "^3.9.2"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.0"
ruff = "^0.0.277"
black = "^23.7.0"
pytest-cov = "^4.1.0"
coverage-badge = "^1.1.0"
httpx = "^0.24.1"
asgi-lifespan = "^2.1.0"

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
